--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -43,18 +43,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 8, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
+    "def insertion_tableau(L, v, i):\n",
+    "    L2 = (L[:i])\n",
+    "    L2.append(v)\n",
+    "    L2 += L[i:]\n",
+    "    return L2\n",
     "\n",
+    "\n",
+    "liste = [0,1,2,3,4,5]\n",
+    "insertion_tableau(liste, 8,2)\n",
     "\n"
    ]
   },
@@ -107,17 +126,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 6, 8]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
+    "def suppression_tableau(L, i):\n",
+    "    L2 = L[:i+1]\n",
+    "    L2.pop()\n",
+    "    L2 += L[i+1:]\n",
+    "    return L2\n",
+    "\n",
+    "liste2 = [0,2,4,6,8]\n",
+    "suppression_tableau(liste2, 2)\n",
     "\n",
     "\n"
    ]
@@ -182,19 +220,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 4, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
+    "def copie_tableau(L):\n",
+    "    nouvelle_liste = []\n",
+    "    nombre_element = len(L)\n",
+    "    for i in range(nombre_element):\n",
+    "        nouvelle_liste.append(L[i])\n",
+    "    return nouvelle_liste\n",
     "\n",
-    "\n"
+    "liste3 = [1,2,3,4,4,5,4,3,2,1]\n",
+    "copie_tableau(liste3)\n",
+    "    "
    ]
   },
   {
@@ -676,7 +733,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
