--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -251,6 +251,10 @@
     "\n",
     "liste3 = [1,2,3,4,4,5,4,3,2,1]\n",
     "copie_tableau(liste3)\n",
+    "\n",
+    "\n",
+    "#complexité n car elle depend du nombre n delement du tableau avec iteration n fois\n",
+    "test = 1\n",
     "    "
    ]
   },
