--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "tags": [
      "answer"
@@ -136,10 +136,10 @@
     {
      "data": {
       "text/plain": [
-       "[0, 2, 6, 8]"
+       "[2, 4, 6, 8]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,9 +155,37 @@
     "    return L2\n",
     "\n",
     "liste2 = [0,2,4,6,8]\n",
-    "suppression_tableau(liste2, 2)\n",
+    "suppression_tableau(liste2, 0)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "ce9d6e58",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 3, 4, 5, 6]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def sup(L,i):\n",
+    "    for j in range(i, len(L)-1):\n",
+    "        L[j] = L[j+1]\n",
+    "    L.pop()\n",
+    "    return L\n",
+    "    \n",
+    "liste3 = [0,1,2,3,4,5,6]\n",
+    "sup(liste3, 1)\n"
    ]
   },
   {
@@ -220,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {
     "tags": [
      "answer"
@@ -228,12 +256,19 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 4, 5, 4, 3, 2, 1]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "[1, 2, 3, 4, 4, 5, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,14 +282,14 @@
     "    nombre_element = len(L)\n",
     "    for i in range(nombre_element):\n",
     "        nouvelle_liste.append(L[i])\n",
+    "    print(liste4)\n",
     "    return nouvelle_liste\n",
     "\n",
-    "liste3 = [1,2,3,4,4,5,4,3,2,1]\n",
-    "copie_tableau(liste3)\n",
+    "liste4 = [1,2,3,4,4,5,4,3,2,1]\n",
+    "copie_tableau(liste4)\n",
     "\n",
     "\n",
     "#complexité n car elle depend du nombre n delement du tableau avec iteration n fois\n",
-    "test = 1\n",
     "    "
    ]
   },
@@ -346,19 +381,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
+    "def minimum_tableau(L):\n",
+    "    maximum = max(L)\n",
+    "    taille = len(liste5)\n",
+    "    for i in range(taille-1):\n",
+    "        if (L[i] > L[i+1]) and (L[i+1] < maximum):\n",
+    "            maximum = L[i+1]\n",
+    "    return maximum\n",
     "\n",
+    "liste5 = [3,2,8,6,5,0, 3, 21, 2,3,4,4,2,1,93,3,2,10,10,21,13,32]\n",
+    "minimum_tableau(liste5)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "7ffe7a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def min(L):\n",
+    "    m = L[0]\n",
+    "    for i in range(1, len(L)):\n",
+    "        if (L[i] < m):\n",
+    "            m = L[i]\n",
+    "    return m\n",
+    "\n",
+    "liste5 = [3,2,8,6,5,0, 3, 21, 2,3,4,4,2,1,93,3,2,10,10,21,13,32]\n",
+    "min(liste5)"
    ]
   },
   {
@@ -376,18 +460,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
     "\n",
+    "def minimum_tableau_trie(L):\n",
+    "    L.sort()\n",
+    "    minimum = L[0]\n",
+    "    return minimum\n",
+    "\n",
+    "\n",
+    "liste6 = [2,3,4,0,1,2,3,4,5,6,7,8]\n",
+    "minimum_tableau_trie(liste6)\n",
     "\n"
    ]
   },
@@ -449,19 +552,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 14, 20, 22]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "############################## \n",
     "#   Saisir votre code ici.   #\n",
     "##############################\n",
+    "def ajouter_tableau(L, e):\n",
+    "    i=0\n",
+    "    while (L[i] < e) and (i < len(L)):\n",
+    "        i +=1\n",
+    "    for j in range(i, len(L)-1):\n",
+    "        L[j+1] = L[j]\n",
+    "    L[i] = e\n",
+    "    return L\n",
     "\n",
-    "\n"
+    "\n",
+    "liste8 = [8, 14, 22, 35]\n",
+    "\n",
+    "ajouter_tableau(liste8, 20)\n"
    ]
   },
   {
