--- a/TD/TD2/2_gui.ipynb
+++ b/TD/TD2/2_gui.ipynb
@@ -42,6 +42,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "\n",
+    "CANVAS_WIDTH, CANVAS_HEIGHT = 600, 400\n",
+    "\n",
+    "root = tk.Tk()\n",
+    "\n",
+    "canvas = tk.Canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
+    "\n",
+    "# Début de votre code\n",
+    "x = CANVAS_WIDTH /2\n",
+    "y0 = 100\n",
+    "y1 = CANVAS_HEIGHT-100\n",
+    "canvas.create_line(x,y0, x,y1)\n",
+    "canvas.create_oval(x - 50, y0 + 50, x + 50, y0 - 50)\n",
+    "canvas.create_oval(x - 50, y1 + 50, x + 50, y1 - 50)\n",
+    "canvas.create_oval(x-50, y0+50, x+50, y1-50)\n",
+    "    \n",
+    "# Fin de votre code\n",
+    "\n",
+    "canvas.grid(column=1, row=3)\n",
+    "root.mainloop()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,6 +127,57 @@
    "metadata": {},
    "source": [
     "6. Faire en sorte que le bouton `Choisir une couleur` demande une couleur à l'utilisateur dans le terminal. Ensuite, les objets qui s'affichent doivent être de cette couleur, qui peut être modifiée par l'utilisateur autant de fois qu'il le souhaite. Tant que l'utilisateur n'a pas choisi de couleur, la couleur est bleue. On rappelle les couleurs prédéfinies: white, black, red, green, blue, cyan, yellow."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk \n",
+    "import random as rd\n",
+    "def dessine_cercle():\n",
+    "    liste_couleur = ['blue', 'red', 'white', 'purple', 'green']\n",
+    "    couleur = rd.choice(liste_couleur)\n",
+    "    x = rd.randint(25, CW-50)\n",
+    "    y = rd.randint(25, CH-50)\n",
+    "    Canevas.create_oval(x-50, y-50, x+50, y+50, fill=couleur)\n",
+    "\n",
+    "\n",
+    "\n",
+    "CW = 600\n",
+    "CH = 400\n",
+    "fenetre = tk.Tk()\n",
+    "fenetre.title('Mon dessin')\n",
+    "Canevas = tk.Canvas(fenetre, bg='black', width=CW , height=CH)\n",
+    "boutton1 = tk.Button(fenetre, text= 'Choisir une couleur')\n",
+    "boutton2 = tk.Button(fenetre, text='cercle', command=dessine_cercle)\n",
+    "boutton3 = tk.Button(fenetre, text='carré')\n",
+    "boutton4 = tk.Button(fenetre, text='croix')\n",
+    "\n",
+    "\n",
+    "#emplacement\n",
+    "Canevas.grid(column= 1, row= 1, columnspan=4, rowspan=4)\n",
+    "boutton1.grid(column=2, row=0)\n",
+    "boutton2.grid(column=0, row=2)\n",
+    "boutton3.grid(column=0, row=3)\n",
+    "boutton4.grid(column=0, row=4)\n",
+    "fenetre.mainloop()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "def dessine_cercle():\n",
+    "    x = rd.randint(50, CW-50)\n",
+    "    y = rd.randint(50, CH-50)\n",
+    "    canvas.create_oval(x-50, y-50, x+50, y+50, fill=couleur)"
    ]
   },
   {
@@ -282,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   },
   "toc": {
    "base_numbering": 1,
